<resources>
    <string name="app_name">DocsReader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">文档阅读器</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_kotlin_en">Kotlin(EN)</string>
    <string name="menu_kotlin">Kotlin</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="layout_header">布局</string>
    <string name="sync_header">Sync</string>

    <!-- Layout Preferences -->
    <string name="main_rotate_title">主页横屏</string>
    <string name="web_rotate_title">文档页横屏</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_java">Java</string>
    <string name="cancel">取消</string>
    <string name="search">Search</string>
</resources>
