<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/layout_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="main_rotate"
            app:title="@string/main_rotate_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="web_rotate"
            app:title="@string/web_rotate_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/sync_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>