<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_kotlin"
            android:icon="@drawable/ic_bookmark_24"
            android:title="@string/menu_kotlin" />
        <item
            android:id="@+id/nav_kotlin_en"
            android:icon="@drawable/ic_bookmark_24"
            android:title="@string/menu_kotlin_en" />
        <item
            android:id="@+id/nav_java"
            android:icon="@drawable/ic_bookmark_24"
            android:title="@string/menu_java" />
    </group>
</menu>
