<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ypp.docsreader.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.ypp.docsreader.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_kotlin_en"
        android:name="com.ypp.docsreader.ui.kotlin_en.KotlinEnFragment"
        android:label="@string/menu_kotlin_en"
        tools:layout="@layout/fragment_kotlin_en" />

    <fragment
        android:id="@+id/nav_kotlin"
        android:name="com.ypp.docsreader.ui.kotlin.KotlinFragment"
        android:label="@string/menu_kotlin"
        tools:layout="@layout/fragment_kotlin" />

    <fragment
        android:id="@+id/nav_java"
        android:name="com.ypp.docsreader.ui.java.JavaFragment"
        android:label="@string/menu_java"
        tools:layout="@layout/fragment_java" />
</navigation>